Ensure background is covered by shape

--- a/src/ui/components/ShapeAcross/stylesheet.css
+++ b/src/ui/components/ShapeAcross/stylesheet.css
@@ -23,7 +23,7 @@
   position: absolute;
   top: 0.5rem;
   width: 100vw;
-  height: 103.5vw;
+  height: calc(103vw - 1rem);
   background: fixed 0% 50% no-repeat var(--shape-color);
   background-size: 120%;
 }
